--- a/app/join/page.module.css
+++ b/app/join/page.module.css
@@ -21,7 +21,7 @@
 .backgroundImage {
   width: 100%;
   height: 100%;
-  background: url("/img/wave.png") no-repeat center center;
+  background: url("/img/bg.svg") no-repeat center center;
   background-size: cover;
 }
 
